--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "debug": "node --inspect bin/www",
     "start": "node bin/www",
     "build": "webpack",
     "watch": "webpack -d --watch --info-verbosity verbose"
