implement login form

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "digitopia": "git+https://github.com/mediapolis/digitopia.git#jquery-3-working",
     "express": "~4.16.0",
     "express-validator": "^6.2.0",
     "http-errors": "~1.6.2",
