--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "debug": "NODE_ENV=local DEBUG=antisocial-user* node --inspect bin/www",
+    "debug": "NODE_ENV=local DEBUG=antisocial-* node --inspect bin/www",
     "development": "NODE_ENV=development node bin/www",
     "production": "NODE_ENV=production node bin/www",
     "build": "webpack",
@@ -22,8 +22,9 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
     "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.1",
     "stripe": "^7.10.0",
     "uid2": "0.0.3"
   },
