--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "production": "NODE_ENV=production node bin/www",
     "build": "webpack",
     "watch": "webpack --devtool source-map -d --watch --info-verbosity verbose",
-    "test": "NODE_ENV=local DEBUG=antisocial-user* mocha tests/users.js"
+    "test": "NODE_ENV=local DEBUG=antisocial-user* testing=true mocha tests/users.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
