--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "debug": "~2.6.9",
     "digitopia": "git+https://github.com/mediapolis/digitopia.git#jquery-3-working",
     "express": "~4.16.0",
-    "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "helmet-csp": "^2.9.4",
     "http-errors": "~1.6.2",
@@ -32,7 +31,8 @@
     "pug": "2.0.0-beta11",
     "sequelize": "^5.21.1",
     "stripe": "^7.10.0",
-    "uid2": "0.0.3"
+    "uid2": "0.0.3",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -69,6 +69,7 @@
     "grunt-terser": "^0.1.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^8.0.0",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0",
