admin boolean UI

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@material/checkbox": "^3.2.0",
     "@material/data-table": "^3.2.0",
+    "@material/density": "^4.0.0",
     "@material/dialog": "^3.2.0",
     "@material/drawer": "^3.2.0",
     "@material/fab": "^3.2.0",
@@ -49,6 +50,7 @@
     "@material/ripple": "^3.2.0",
     "@material/select": "^3.2.0",
     "@material/snackbar": "^3.2.0",
+    "@material/switch": "^4.0.0",
     "@material/textfield": "^3.2.0",
     "@material/top-app-bar": "^3.2.0",
     "assert": "^2.0.0",
