--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.6.2",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@material/checkbox": "^3.2.0",
+    "@material/chips": "^4.0.0",
     "@material/data-table": "^3.2.0",
     "@material/density": "^4.0.0",
     "@material/dialog": "^3.2.0",
@@ -47,7 +48,7 @@
     "@material/form-field": "^3.2.0",
     "@material/layout-grid": "^3.1.0",
     "@material/linear-progress": "^3.2.0",
-    "@material/ripple": "^3.2.0",
+    "@material/ripple": "^4.0.0",
     "@material/select": "^3.2.0",
     "@material/snackbar": "^3.2.0",
     "@material/switch": "^4.0.0",
