--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
+    "markdown-it": "^10.0.0",
     "mime": "^2.4.4",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
