--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "cookie-parser": "~1.4.3",
     "csurf": "^1.10.0",
     "debug": "~2.6.9",
-    "digitopia": "git+https://github.com/mediapolis/digitopia.git#jquery-3-working",
     "express": "~4.16.0",
     "helmet": "^3.21.2",
     "helmet-csp": "^2.9.4",
@@ -29,7 +28,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.7.0",
     "node-cron": "^2.0.3",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.4",
     "sequelize": "^5.21.1",
     "stripe": "^7.10.0",
     "uid2": "0.0.3",
@@ -71,6 +70,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-exec": "^3.0.0",
     "grunt-terser": "^0.1.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "prosemirror-example-setup": "^1.1.2",
