--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "webpack --devtool source-map -d --watch --info-verbosity verbose"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
