--- a/package.json
+++ b/package.json
@@ -1,92 +1,94 @@
 {
-  "name": "userapp",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "test": "NODE_ENV=test TESTING=true npx mocha tests/users.js",
-    "debug": "NODE_ENV=local node --inspect bin/www",
-    "local": "NODE_ENV=local node bin/www",
-    "development": "NODE_ENV=development node bin/www",
-    "production": "NODE_ENV=production node bin/www",
-    "build": "npx webpack;npx grunt",
-    "watch": "npx webpack --devtool source-map -d --watch --info-verbosity verbose&npx grunt devel&"
-  },
-  "dependencies": {
-    "basic-auth": "^2.0.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.3",
-    "csurf": "^1.10.0",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "helmet": "^3.21.2",
-    "helmet-csp": "^2.9.4",
-    "http-errors": "~1.6.2",
-    "jquery": "^3.4.1",
-    "js-cookie": "^2.2.1",
-    "markdown-it": "^10.0.0",
-    "mime": "^2.4.4",
-    "moment": "^2.24.0",
-    "morgan": "~1.9.0",
-    "mysql2": "^1.7.0",
-    "node-cron": "^2.0.3",
-    "pug": "^2.0.4",
-    "sequelize": "^5.21.1",
-    "stripe": "^7.10.0",
-    "uid2": "0.0.3",
-    "validator": "^12.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@material/checkbox": "^3.2.0",
-    "@material/chips": "^4.0.0",
-    "@material/data-table": "^3.2.0",
-    "@material/density": "^4.0.0",
-    "@material/dialog": "^3.2.0",
-    "@material/drawer": "^3.2.0",
-    "@material/fab": "^3.2.0",
-    "@material/form-field": "^3.2.0",
-    "@material/layout-grid": "^3.1.0",
-    "@material/linear-progress": "^3.2.0",
-    "@material/ripple": "^4.0.0",
-    "@material/select": "^3.2.0",
-    "@material/snackbar": "^3.2.0",
-    "@material/switch": "^4.0.0",
-    "@material/textfield": "^3.2.0",
-    "@material/top-app-bar": "^3.2.0",
-    "assert": "^2.0.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^3.2.0",
-    "expect.js": "^0.3.1",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
-    "grunt": "^1.0.4",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-stylus": "^1.2.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-exec": "^3.0.0",
-    "grunt-terser": "^0.1.0",
-    "material-design-icons-iconfont": "^5.0.1",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "prosemirror-example-setup": "^1.1.2",
-    "prosemirror-markdown": "^1.4.2",
-    "prosemirror-state": "^1.3.2",
-    "prosemirror-view": "^1.13.4",
-    "pug-cli": "^1.0.0-alpha6",
-    "sass-loader": "^8.0.0",
-    "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.0",
-    "superagent": "^5.1.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "webpack-notifier": "^1.8.0"
-  }
+	"name": "userapp",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"test": "NODE_ENV=test TESTING=true npx mocha tests/users.js",
+		"debug": "NODE_ENV=local node --inspect bin/www",
+		"local": "NODE_ENV=local node bin/www",
+		"development": "NODE_ENV=development node bin/www",
+		"production": "NODE_ENV=production node bin/www",
+		"build": "npx webpack;npx grunt",
+		"watch": "npx webpack --devtool source-map -d --watch --info-verbosity verbose&npx grunt devel&",
+		"getcert": "node bin/certbot-install.js"
+	},
+	"dependencies": {
+		"basic-auth": "^2.0.1",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
+		"cookie-parser": "~1.4.3",
+		"csurf": "^1.10.0",
+		"debug": "~2.6.9",
+		"dotenv": "^8.2.0",
+		"express": "~4.16.0",
+		"helmet": "^3.21.2",
+		"helmet-csp": "^2.9.4",
+		"http-errors": "~1.6.2",
+		"jquery": "^3.4.1",
+		"js-cookie": "^2.2.1",
+		"markdown-it": "^10.0.0",
+		"mime": "^2.4.4",
+		"moment": "^2.24.0",
+		"morgan": "~1.9.0",
+		"mysql2": "^1.7.0",
+		"node-cron": "^2.0.3",
+		"pug": "^2.0.4",
+		"sequelize": "^5.21.1",
+		"stripe": "^7.10.0",
+		"uid2": "0.0.3",
+		"validator": "^12.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.6.2",
+		"@babel/preset-env": "^7.6.2",
+		"@fortawesome/fontawesome-free": "^5.11.2",
+		"@material/checkbox": "^3.2.0",
+		"@material/chips": "^4.0.0",
+		"@material/data-table": "^3.2.0",
+		"@material/density": "^4.0.0",
+		"@material/dialog": "^3.2.0",
+		"@material/drawer": "^3.2.0",
+		"@material/fab": "^3.2.0",
+		"@material/form-field": "^3.2.0",
+		"@material/layout-grid": "^3.1.0",
+		"@material/linear-progress": "^3.2.0",
+		"@material/ripple": "^4.0.0",
+		"@material/select": "^3.2.0",
+		"@material/snackbar": "^3.2.0",
+		"@material/switch": "^4.0.0",
+		"@material/textfield": "^3.2.0",
+		"@material/top-app-bar": "^3.2.0",
+		"assert": "^2.0.0",
+		"autoprefixer": "^9.6.1",
+		"babel-loader": "^8.0.6",
+		"babel-preset-es2015": "^6.24.1",
+		"css-loader": "^3.2.0",
+		"expect.js": "^0.3.1",
+		"extract-loader": "^3.1.0",
+		"file-loader": "^4.2.0",
+		"grunt": "^1.0.4",
+		"grunt-contrib-concat": "^1.0.1",
+		"grunt-contrib-copy": "^1.0.0",
+		"grunt-contrib-cssmin": "^3.0.0",
+		"grunt-contrib-stylus": "^1.2.0",
+		"grunt-contrib-watch": "^1.1.0",
+		"grunt-exec": "^3.0.0",
+		"grunt-terser": "^0.1.0",
+		"material-design-icons-iconfont": "^5.0.1",
+		"node-sass": "^4.12.0",
+		"postcss-loader": "^3.0.0",
+		"prosemirror-example-setup": "^1.1.2",
+		"prosemirror-markdown": "^1.4.2",
+		"prosemirror-state": "^1.3.2",
+		"prosemirror-view": "^1.13.4",
+		"pug-cli": "^1.0.0-alpha6",
+		"sass-loader": "^8.0.0",
+		"sequelize-cli": "^5.5.1",
+		"sqlite3": "^4.1.0",
+		"superagent": "^5.1.0",
+		"webpack": "^4.41.0",
+		"webpack-cli": "^3.3.9",
+		"webpack-dev-server": "^3.8.2",
+		"webpack-notifier": "^1.8.0"
+	}
 }
