--- a/package.json
+++ b/package.json
@@ -63,6 +63,12 @@
 		"babel-loader": "^8.0.6",
 		"babel-preset-es2015": "^6.24.1",
 		"css-loader": "^3.2.0",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.0",
+		"eslint-plugin-import": "^2.19.1",
+		"eslint-plugin-node": "^10.0.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.1",
 		"expect.js": "^0.3.1",
 		"extract-loader": "^3.1.0",
 		"file-loader": "^4.2.0",
