--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@fortawesome/fontawesome-free": "^5.11.2",
+		"@material/card": "^4.0.0",
 		"@material/checkbox": "^3.2.0",
 		"@material/chips": "^4.0.0",
 		"@material/data-table": "^3.2.0",
@@ -58,6 +59,7 @@
 		"@material/switch": "^4.0.0",
 		"@material/textfield": "^3.2.0",
 		"@material/top-app-bar": "^3.2.0",
+		"@material/typography": "^4.0.0",
 		"assert": "^2.0.0",
 		"autoprefixer": "^9.6.1",
 		"babel-loader": "^8.0.6",
