--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"debug": "~2.6.9",
 		"dotenv": "^8.2.0",
 		"express": "~4.16.0",
+		"function-rate-limit": "^1.1.0",
 		"helmet": "^3.21.2",
 		"helmet-csp": "^2.9.4",
 		"http-errors": "~1.6.2",
@@ -32,6 +33,7 @@
 		"morgan": "~1.9.0",
 		"mysql2": "^1.7.0",
 		"node-cron": "^2.0.3",
+		"nodemailer": "^6.4.2",
 		"pug": "^2.0.4",
 		"sequelize": "^5.21.1",
 		"stripe": "^7.10.0",
