--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
 		"nodemailer": "^6.4.2",
 		"pug": "^2.0.4",
 		"sequelize": "^5.21.1",
+		"spdy": "^4.0.1",
 		"stripe": "^7.10.0",
 		"uid2": "0.0.3",
 		"validator": "^12.0.0"
 	},
 	"devDependencies": {
-		"@antisocialnet/reagent": "^0.3.0",
+		"@antisocialnet/reagent": "^0.5.5",
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@fortawesome/fontawesome-free": "^5.11.2",
