migrate MDC to tropicbird. bump sargasso version

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"local": "NODE_ENV=local node bin/www",
 		"development": "NODE_ENV=development node bin/www",
 		"production": "NODE_ENV=production node bin/www",
-		"build": "npx webpack;npx grunt",
+		"build": "npx webpack;npx grunt;rollup -c rollup.config.js;",
 		"watch": "npx webpack --devtool source-map -d --watch --info-verbosity verbose&npx grunt devel&",
 		"getcert": "node bin/certbot-install.js"
 	},
@@ -45,25 +45,8 @@
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@fortawesome/fontawesome-free": "^5.11.2",
-		"@material/card": "^4.0.0",
-		"@material/checkbox": "^3.2.0",
-		"@material/chips": "^4.0.0",
-		"@material/data-table": "^3.2.0",
-		"@material/density": "^4.0.0",
-		"@material/dialog": "^3.2.0",
-		"@material/drawer": "^3.2.0",
-		"@material/fab": "^3.2.0",
-		"@material/form-field": "^3.2.0",
-		"@material/layout-grid": "^3.1.0",
-		"@material/linear-progress": "^3.2.0",
-		"@material/ripple": "^4.0.0",
-		"@material/select": "^3.2.0",
-		"@material/snackbar": "^3.2.0",
-		"@material/switch": "^4.0.0",
-		"@material/textfield": "^3.2.0",
-		"@material/top-app-bar": "^3.2.0",
-		"@material/typography": "^4.0.0",
-		"@pelagiccreatures/sargasso": "^0.5.21",
+		"@pelagiccreatures/sargasso": "^0.6.1",
+		"@pelagiccreatures/tropicbird": "^0.1.4",
 		"@rollup/plugin-json": "^4.0.1",
 		"assert": "^2.0.0",
 		"autoprefixer": "^9.6.1",
