--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
 		"local": "NODE_ENV=local node bin/www",
 		"development": "NODE_ENV=development node bin/www",
 		"production": "NODE_ENV=production node bin/www",
-		"build": "npx webpack;npx grunt;rollup -c rollup.config.js;",
+		"build": "npx webpack;npx grunt;rollup --no-treeshake --no-freeze -c rollup.config.js;rollup -c rollup.config.markdown.js;",
 		"watch": "npx webpack --devtool source-map -d --watch --info-verbosity verbose&npx grunt devel&",
 		"getcert": "node bin/certbot-install.js"
 	},
 	"dependencies": {
+		"@pelagiccreatures/flyingfish": "^0.1.1",
+		"@pelagiccreatures/molamola": "^0.2.1",
+		"@pelagiccreatures/sargasso": "^0.8.2",
+		"@pelagiccreatures/tropicbird": "^0.2.1",
 		"basic-auth": "^2.0.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
@@ -45,9 +49,6 @@
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@fortawesome/fontawesome-free": "^5.11.2",
-		"@pelagiccreatures/sargasso": "^0.7.0",
-		"@pelagiccreatures/tropicbird": "^0.1.7",
-		"@pelagiccreatures/flyingfish": "^0.0.4",
 		"@rollup/plugin-json": "^4.0.1",
 		"assert": "^2.0.0",
 		"autoprefixer": "^9.6.1",
