sargasso version bump

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 		"getcert": "node bin/certbot-install.js"
 	},
 	"dependencies": {
-		"@pelagiccreatures/flyingfish": "^0.1.1",
-		"@pelagiccreatures/molamola": "^0.2.1",
-		"@pelagiccreatures/sargasso": "^0.8.2",
-		"@pelagiccreatures/tropicbird": "^0.2.1",
+		"@pelagiccreatures/flyingfish": "^0.1.2",
+		"@pelagiccreatures/molamola": "^0.2.2",
+		"@pelagiccreatures/sargasso": "^0.8.5",
+		"@pelagiccreatures/tropicbird": "^0.2.2",
 		"basic-auth": "^2.0.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
@@ -49,7 +49,9 @@
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@fortawesome/fontawesome-free": "^5.11.2",
+		"@rollup/plugin-commonjs": "^11.0.1",
 		"@rollup/plugin-json": "^4.0.1",
+		"@rollup/plugin-node-resolve": "^7.0.0",
 		"assert": "^2.0.0",
 		"autoprefixer": "^9.6.1",
 		"babel-loader": "^8.0.6",
@@ -80,8 +82,7 @@
 		"prosemirror-state": "^1.3.2",
 		"prosemirror-view": "^1.13.4",
 		"pug-cli": "^1.0.0-alpha6",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup-plugin-terser": "^5.2.0",
 		"sass-loader": "^8.0.0",
 		"sequelize-cli": "^5.5.1",
 		"sqlite3": "^4.1.0",
