--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "marlinapp",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"private": true,
 	"scripts": {
 		"test": "NODE_ENV=test TESTING=true npx mocha --exit node_modules/@pelagiccreatures/marlin/tests/users.js",
@@ -9,66 +9,67 @@
 		"development": "NODE_ENV=development node bin/www",
 		"production": "NODE_ENV=production node bin/www",
 		"build": "npx webpack;npx grunt;npx rollup --no-treeshake --no-freeze -c rollup.config.js;npx rollup -c rollup.config.markdown.js;",
+		"watch": "npx webpack --devtool source-map -d --watch --info-verbosity verbose&npx grunt devel&",
 		"getcert": "node bin/certbot-install.js"
 	},
 	"dependencies": {
-		"@pelagiccreatures/flyingfish": "^1.0.4",
+		"@pelagiccreatures/flyingfish": "^1.2.0",
+		"@pelagiccreatures/molamola": "^1.3.0",
+		"@pelagiccreatures/sargasso": "^1.7.0",
+		"@pelagiccreatures/tropicbird": "^1.3.0",
 		"@pelagiccreatures/marlin": "^0.2.2",
-		"@pelagiccreatures/molamola": "^1.1.0",
-		"@pelagiccreatures/sargasso": "^1.1.0",
-		"@pelagiccreatures/tropicbird": "^1.0.5",
 		"basic-auth": "^2.0.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"csurf": "^1.11.0",
-		"debug": "~4.3.1",
-		"dotenv": "^8.2.0",
+		"debug": "~4.3.2",
+		"dotenv": "^10.0.0",
 		"express": "~4.17.1",
 		"function-rate-limit": "^1.1.0",
-		"helmet": "^4.4.1",
-		"helmet-csp": "^3.3.1",
+		"helmet": "^4.6.0",
+		"helmet-csp": "^3.4.0",
 		"http-errors": "~1.8.0",
-		"js-cookie": "^2.2.1",
-		"markdown-it": "^12.0.4",
+		"js-cookie": "^3.0.1",
+		"markdown-it": "^12.2.0",
 		"material-design-icons-iconfont": "^6.1.0",
 		"mime": "^2.5.2",
 		"moment": "^2.29.1",
 		"morgan": "~1.10.0",
-		"node-cron": "^2.0.3",
+		"node-cron": "^3.0.0",
 		"node-persist": "^3.1.0",
-		"nodemailer": "^6.4.18",
-		"pug": "^3.0.0",
+		"nodemailer": "^6.6.3",
+		"pug": "^3.0.2",
 		"request-promise": "^4.2.6",
-		"sequelize": "^6.5.0",
+		"sequelize": "^6.6.5",
 		"sqlite3": "^5.0.2",
-		"stripe": "^8.137.0",
-		"uid2": "0.0.3",
-		"validator": "^13.5.2",
-		"web-push": "^3.4.4"
+		"stripe": "^8.174.0",
+		"uid2": "1.0.0",
+		"validator": "^13.6.0",
+		"web-push": "^3.4.5"
 	},
 	"devDependencies": {
-		"@fortawesome/fontawesome-free": "^5.15.2",
-		"@rollup/plugin-commonjs": "^17.1.0",
+		"@fortawesome/fontawesome-free": "^5.15.1",
+		"@rollup/plugin-commonjs": "^20.0.0",
 		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^11.2.0",
+		"@rollup/plugin-node-resolve": "^13.0.4",
 		"animate.css": "^4.1.1",
 		"assert": "^2.0.0",
-		"autoprefixer": "^10.2.4",
-		"chai": "^4.3.0",
+		"autoprefixer": "^10.3.4",
+		"chai": "^4.3.4",
 		"css-loader": "^5.0.2",
-		"eslint": "^7.20.0",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-plugin-import": "^2.22.1",
+		"eslint": "^7.32.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.24.2",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-promise": "^5.1.0",
 		"event-target-shim": "^6.0.2",
 		"expect.js": "^0.3.1",
 		"extract-loader": "^5.1.0",
 		"file-loader": "^6.2.0",
-		"googleapis": "^67.1.0",
-		"grunt": "^1.3.0",
+		"googleapis": "^85.0.0",
+		"grunt": "^1.4.1",
 		"grunt-contrib-concat": "^1.0.1",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-contrib-cssmin": "^4.0.0",
@@ -76,29 +77,31 @@
 		"grunt-contrib-watch": "^1.1.0",
 		"grunt-exec": "^3.0.0",
 		"lodash": "^4.17.21",
-		"mocha": "^8.3.0",
-		"node-sass": "^5.0.0",
+		"mocha": "^9.1.1",
+		"node-sass": "6.0.0",
 		"node-vibrant": "^3.1.6",
-		"postcss-loader": "^5.0.0",
+		"postcss-loader": "6.1.0",
 		"prosemirror-example-setup": "^1.1.2",
-		"prosemirror-markdown": "^1.5.1",
+		"prosemirror-markdown": "^1.5.2",
 		"prosemirror-state": "^1.3.4",
-		"prosemirror-view": "^1.17.6",
+		"prosemirror-view": "^1.20.1",
 		"pug-cli": "^1.0.0-alpha6",
 		"rollup-plugin-terser": "^7.0.2",
-		"sass-loader": "^11.0.1",
+		"sass": "1.35.1",
+		"sass-loader": "12.1.0",
 		"sequelize-cli": "^6.2.0",
-		"sharp": "^0.27.1",
+		"sharp": "^0.29.1",
 		"superagent": "^6.1.0",
-		"typescript": "^4.1.5",
-		"webpack": "^5.23.0",
-		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.2",
+		"typescript": "^4.4.3",
+		"webpack": "^5.40.0",
+		"webpack-cli": "4.7.2",
+		"webpack-dev-server": "^4.2.1",
 		"webpack-notifier": "^1.13.0",
-		"workbox-expiration": "^6.1.0",
-		"workbox-routing": "^6.1.0",
-		"workbox-strategies": "^6.1.0",
-		"workbox-sw": "^6.1.0",
+		"workbox-cacheable-response": "^6.3.0",
+		"workbox-expiration": "^6.3.0",
+		"workbox-routing": "^6.3.0",
+		"workbox-strategies": "^6.3.0",
+		"workbox-sw": "^6.3.0",
 		"worker-loader": "^3.0.8"
 	}
 }
